--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
     box-sizing: border-box;
 }
 
-/*layout principal*/
-html, body {
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
-    color:  #333;
+
+#imagemdefundobody{
+    background: black url('imagens/fundo-curvas-azuis.jpg') no-repeat center center fixed;
+    background-size: cover;
+
+    height: 100vh;
 }
 
 /*Corpo da página*/
@@ -24,15 +24,24 @@ body {
 
 /*cabeçalho*/
 header {
-    text-align: center;
+    
     padding: 20px;
     background-color: #282c34;
     color: white;
 }
 
+header a {
+    color: white;
+    padding: 10px;
+}
 
 h1 {
     font-size: 3em;
+    text-align: center;
+}
+
+p {
+    text-align: justify;
 }
 
 /*seções*/
@@ -42,6 +51,8 @@ h1 {
     background-color: white;
     border-radius: 8px;
 }
+
+
 
 #projetos .projeto {
     margin: 10px 0;
